fix: Fix path image when deploy github pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 overflow: hidden;
                 display: grid;
                 place-items: center;
-                background-image: url('/assets/images/bgpikachu2.webp');
+                background-image: url('./assets/images/bgpikachu2.webp');
                 background-position: center;
                 object-fit: cover;
                 background-repeat: no-repeat;
